2000-08-02  Peter Stephenson  <pws@csr.com>

	* Andrej: 12487: configure.in, Etc/MACHINES, Src/Makefile.in,
	Src/init.c, Src/main.c, Src/makepro.awk, Src/mkmakemod.sh,
	Src/parse.c, Src/zsh.h, Src/Zle/zle_utils.c: Dynamic loading
	on cygwin.

2000-08-02  Clint Adams  <schizo@debian.org>

        * 12489: Src/Modules/files.c, Src/Modules/parameter.c: check
	errno change from pathconf() in case of unlimited path length.

        * 12472: configure.in, Src/Modules/files.c,
	Src/Modules/parameter.c: use pathconf() instead
	of PATH_MAX if possible.

2000-08-02  Adam Spiers  <adam@spiers.net>

	* 12486: Completion/Base/{.distfiles,_cache_invalid,_retrieve_cache,
	_store_cache}, Completion/Builtins/_zstyle, Completion/Linux/_rpm,
	Completion/User/_perl_modules, Doc/Zsh/compsys.yo: new completion
	caching layer

2000-08-02  Sven Wischnowsky  <wischnow@zsh.org>

	* 12483: Completion/Base/_arguments, Completion/Core/_complete,
 	Doc/Zsh/compsys.yo: if compcontext is an assoc, the keys are the
 	completions and the values are their descriptions
	
	* 12475: Completion/Base/_arguments: prefer user-defined specs
 	over ones derived from --help output
	
2000-08-01  Sven Wischnowsky  <wischnow@zsh.org>

	* Jan Fedak: 12463: Completion/User/_slrn: new completion function
	for slrn
	
	* 12462: Completion/Base/_arguments: fix for automatically
 	recognised options, don't expect an argument after each of them
	
	* 12453: Completion/Bsd/_bsd_pkg, Completion/Bsd/_kld,
 	Completion/Commands/_next_tags, Completion/User/_cvs,
 	Completion/User/_mailboxes, Completion/X/_xset,
 	Completion/X/_xwit, Src/exec.c: remove tests for kshautoload (use
 	zcompile -z); fix for setting scriptname for functions that
 	redefine themselves
	
	* 12449: Completion/Base/_arguments, Completion/Base/_values,
 	Completion/Core/_complete, Doc/Zsh/compsys.yo: make $compcontext
 	more powerful and easier to use for simple cases
	
2000-07-31  Peter Stephenson  <pws@csr.com>

	* Config/version.mk: 3.1.9-dev-4.
