@@ -1,3 +1,9 @@
+2000-08-03  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 12494: Doc/Zsh/options.yo, Src/Zle/zle_main.c: make binding of
+ 	^D be used in first column if ignoreeof is set and ^D is bound to
+ 	a shell function widget
+	
 2000-08-02  Peter Stephenson  <pws@csr.com>
 
 	* Andrej: 12487: configure.in, Etc/MACHINES, Src/Makefile.in,
